# DataStructureOfList

./: CMakeLists.txt  README.md  main.cpp
Inc/: LinkList.h  SqList.h
SqList/: hello.c  world.c
Src/: LinkList.cpp  SqList.cpp
